# monolith-py

./: README.md  setup.cfg  setup.py
monolith_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
monolithpy/: __init__.py  monolithpy.py
