[metadata]
name = monolith-py
version = 1.0.1
author = krishna2206
author_email = fitiavana.krishna@gmail.com
description = A simple python wrapper to https://github.com/Y2Z/monolith.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishna2206/monolith-py
license = MIT License
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >= 3.7

[options.package_data]
monolithpy = bin/monolith